@@ -500,7 +500,7 @@ show_usage(void)
   printf("  -c, --object                   Output executable object file.\n");
   printf("  -d, --debug                    Output debug messages.\n");
   printf("  -f VALUE, --fill VALUE         Fill unused program memory with value.\n");
-  printf("  -h, --help                     Show this usage message.\n");
+  printf("  -?, -h, --help                 Show this usage message.\n");
   printf("  -I DIR, --include DIR          Specify include directory.\n");
   printf("  -l, --no-list                  Disable list file output.\n");
   printf("  -m, --map                      Output a map file.\n");
