@@ -694,7 +694,7 @@ static void show_usage(void)
   printf("  -b, --binary            Print binary data.\n");
   printf("  -c, --mnemonics         Decode special mnemonics.\n");
   printf("  -f, --file              File header.\n");
-  printf("  -h, --help              Show this usage message.\n");
+  printf("  -?, -h, --help          Show this usage message.\n");
   printf("  -n, --no-names          Suppress filenames.\n");
   printf("  -s, --section           Section data.\n");
   printf("      --strict-options    If this is set, then an option may not be parameter\n"
