@@ -36,7 +36,7 @@ supplante la valeur de remplissage du script éditeur de liens. VALEUR ne doit
 pas être supérieure à 0xffff. VALEUR est en hexadécimal et doit être précédée
 par «\ 0x\ ».
 .TP
-.BR \-h ", "\-\-help
+.BR \-? ", " \-h ", " \-\-help
 Afficher un message d'utilisation et quitter.
 .TP
 .BR "\-I RÉP" , " \-\-include RÉP
