@@ -1,4 +1,4 @@
-.TH GPASM 1 "2014-05-01" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
+.TH GPASM 1 "2016-02-28" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
 .SH NAME
 gpasm \- GNU PIC assembler
 .SH SYNOPSIS
@@ -53,7 +53,7 @@ Show full address in .lst file at the memory map region.
 .BR \-g ", " \-\-debug-info
 Use debug directives for COFF.
 .TP
-.BR \-h ", " \-\-help
+.BR \-?", " \-h ", " \-\-help
 Show the usage message and exit.
 .TP
 .BR \-i ", " \-\-ignore\-case
