@@ -1,4 +1,4 @@
-.TH "GPDASM" "1" "2014-11-03" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
+.TH "GPDASM" "1" "2016-02-28" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
 .SH "NAME"
 gpdasm \- GNU PIC disassembler
 .SH "SYNOPSIS"
@@ -20,7 +20,7 @@ manpage for details on other GNU PIC utilities.
 .BR \-c ", " \-\-mnemonics
 Decode the special mnemonics.
 .TP 
-.BR \-h ", "\-\-help
+.BR \-? ", " \-h ", " \-\-help
 Show this usage message and exit.
 .TP 
 .BR \-i ", "\-\-hex\-info
