@@ -1,4 +1,4 @@
-.TH GPLIB 1 "2012-03-04" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
+.TH GPLIB 1 "2016-02-28" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
 .SH NAME
 gplib \- GNU PIC librarian
 .SH SYNOPSIS
@@ -24,7 +24,7 @@ Create a new library.
 .BR \-d ", "\-\-delete
 Delete member from library.
 .TP
-.BR \-h ", "\-\-help
+.BR \-? ", " \-h ", " \-\-help
 Show the usage message and exit.
 .TP
 .BR \-n ", "\-\-no-index
