@@ -1,4 +1,4 @@
-.TH GPSTRIP 1 "2012-03-04" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
+.TH GPSTRIP 1 "2016-02-28" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
 .SH NAME
 gpstrip \- discard symbols from object file
 .SH SYNOPSIS
@@ -20,7 +20,7 @@ manpage for details on other GNU PIC utilities.
 .BR \-g ", "\-\-strip\-debug
 Strip debug symbols.
 .TP
-.BR \-h ", "\-\-help
+.BR \-? ", " \-h ", " \-\-help
 Show the usage message and exit.
 .TP
 .BR "\-k SYMBOL" , " \-\-keep\-symbol SYMBOL
