@@ -1,4 +1,4 @@
-.TH GPVC 1 "2012-03-04" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
+.TH GPVC 1 "2016-02-28" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
 .SH NAME
 gpvc \- GNU PIC COD file viewer
 .SH SYNOPSIS
@@ -30,7 +30,7 @@ Display source listing.
 .BR \-m ", "\-\-message
 Display debug message area.
 .TP
-.BR \-h ", "\-\-help
+.BR \-? ", " \-h ", " \-\-help
 Show the usage message and exit.
 .TP
 .BR \-r ", "\-\-rom
