@@ -1,4 +1,4 @@
-.TH GPVO 1 "2012-03-04" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
+.TH GPVO 1 "2016-02-28" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
 .SH NAME
 gpvo \- GNU PIC object file viewer
 .SH SYNOPSIS
@@ -27,7 +27,7 @@ Decode special mnemonics.
 .BR \-f ", "\-\-file
 Display file header.
 .TP
-.BR \-h ", "\-\-help
+.BR \-? ", " \-h ", " \-\-help
 Show the usage message and exit.
 .TP
 .BR \-n ", "\-\-no\-names
